--- a/README
+++ b/README
@@ -1,2 +1,21 @@
 # Containerized WordPress + Elementor
 
+This is a template for deploying a WordPress website in a Docker container. It includes the Elementor plugin, so you can create your pages via their powerful, drag-and-drop editor without the hassle (or costs) of setting WordPress.
+
+## Requirements
+ 
+- Docker
+
+## Quickstart
+
+1. Clone the repository: `git clone https://github.com/joseprsm/docker-wp.git`
+2. Build your Docker image (or use the default GitHub Actions workflow): `docker build . -t docker-wp`
+3. Run the Docker container: `docker run -p 8080:8080 docker-wp`
+
+The last command will launch a new container and expose it on port 8080. You can access your new WordPress website by going to http://localhost:8080 in your web browser. After you're done creating your website, [export it](https://wordpress.com/support/export/#export-content-to-another-word-press-site) and place it under `templates/`. 
+
+All you have to do then is re-build and push the Docker image to a registry, from where you can then deploy wherever you want. 
+
+## License
+
+This project is licensed under the [MIT License](https://github.com/joseprsm/docker-wp/blob/main/LICENSE).
